@startuml user_service_components
!theme plain

package "User Service" {

    package "HTTP Layer" <<Rectangle>> {
        component [Gin Router] as Router
        component [CORS Middleware] as CORS
        component [Auth Middleware] as AuthMiddleware
        component [UserHandler] as UserH
    }

    package "Application Layer" <<Rectangle>> {
        component [UserUseCase] as UserUC
        component [UserService] as UserService

        interface IUserRepository as IUserRepo
        interface IEventManagerService as IEventMgr
        interface IAuthenticationService as IAuth
        interface IAuthorizationService as IAuthz
    }

    package "Domain Layer" <<Rectangle>> {
        component [User] as User
        component [Ticket] as Ticket
        component [SocialMediaLink] as SocialMedia
    }

    package "Infrastructure Layer" <<Rectangle>> {
        component [MongoUserRepository] as UserRepo
        component [EventManagerHTTPAdapter] as EventMgrAdapter
        component [ServiceAuthClient] as ServiceAuth
        component [RealAuthenticationService] as RealAuth
        component [DummyAuthorizationService] as DummyAuthz
        component [IDM gRPC Client] as IDMClient
        database [MongoDB\nuser_db] as MongoDB
    }

    package "DTO Layer" <<Rectangle>> {
        component [HttpUser] as HttpUser
        component [MongoUser] as MongoUser
    }

    Router --> CORS
    Router --> AuthMiddleware
    Router --> UserH

    UserH --> UserUC
    UserH --> HttpUser

    UserUC --> UserService
    UserUC --> IAuth
    UserUC --> IAuthz

    UserService --> IUserRepo
    UserService --> IEventMgr
    UserService --> User
    User --> Ticket
    User --> SocialMedia

    IUserRepo <|.. UserRepo
    IEventMgr <|.. EventMgrAdapter
    IAuth <|.. RealAuth
    IAuthz <|.. DummyAuthz

    UserRepo --> MongoDB
    UserRepo --> MongoUser

    EventMgrAdapter --> ServiceAuth
    EventMgrAdapter ..> "HTTP Client" : uses

    RealAuth --> IDMClient
    ServiceAuth --> IDMClient

    note right of ServiceAuth
        ServiceAuthClient
        Caches token with 5min buffer
        RWMutex for thread safety
        serviciu_clienti account
    end note

    note right of EventMgrAdapter
        Converts EventManager HTTP
        responses to domain models
        Calls /api/event-manager/tickets
    end note

    note right of UserService
        Business Logic Layer:
        • Email validation
        • Privacy filtering
        • Ticket creation
        • User validation
    end note
}

cloud "EventManager Service" as EventMgr {
    component [REST API\n:8080] as EventAPI
}

EventMgrAdapter --> EventAPI : HTTP

@enduml
